improved condition coverage of unit tests